--- a/style.css
+++ b/style.css
@@ -359,6 +359,8 @@ footer{
     .section-title{
         align-items: center;
         flex-direction: column;
+    }.events .section-title{
+        margin-bottom: 30px;
     }
     .section-title .second{
         display: none;
@@ -395,6 +397,12 @@ footer{
         max-width: 300px;      /* Limit the width of the image */
     }
     @media(max-width: 450px){
+        .contributions-content h3{
+            font-size: 2.3rem;
+        }
+        .dancing-queen h3{
+            font-size: 1.5rem;
+        }
         .section-title{
             font-size: 2.5rem;
         }
